# pulsetraymixer

./: .gitignore  AUTHORS  configure  configure.ac  pulse_event_block.c  pulse_event_block.h
src/: Makefile.am  main.c  mainloop.c  mainloop.h  mixer_control.c  mixer_control.h  mixer_win.c  mixer_win.h  pulse.c  pulse.h  pulse_control.c  pulse_control.h  pulse_event_block.c  pulse_event_block.h  pulse_events.c  pulse_events.h  pulse_item_array.c  pulse_item_array.h  pulsetraymixer  pulsetraymixer.gresources.xml  sink_menu.c  sink_menu.h  tray_icon.c  tray_icon.h
